Changed spinner. Changed fetching logic to include sorting. Added utility to get ads URLs. Added icons for cart and searchbar

--- a/public/custom.css
+++ b/public/custom.css
@@ -1,6 +1,11 @@
 body {
-  background-color: #FAD8D6;
   font-family: 'Martel', serif;
+  overflow-y: scroll;
+}
+
+html {
+  width:100vw;
+  overflow-x:hidden;
 }
 
 h1 {
